회원 가입 기능 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Study-board
+
+# Spring Boot ?? ?? ??
+server.port=8112
+
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=SCOTT
+spring.datasource.password=TIGER
