--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.jetbrains:annotations:24.1.0'
+    implementation 'org.springframework.data:spring-data-commons'
 }
 
 tasks.named('test') {
